k8/Dashboard/dashboard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: url-shortener
  labels:
    app.kubernetes.io/name: dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashboard
    spec:
      containers:
        - name: dashboard
          image: 
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
