k8/Dashboard/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: url-shortener
  labels:
    app.kubernetes.io/name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashboard
    spec:
      serviceAccountName: dashboard-sa
      containers:
        - name: dashboard
          image: 679930074435.dkr.ecr.eu-west-2.amazonaws.com/dashboard_image
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
