k8/Dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: url-shortener
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - url-shortener-aws.co.uk
      secretName: url-shortener-tls
  rules:
    - http:
        paths:
          - path: /summary
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 8081
          - path: /recent
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 8081
          - path: /top
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 8081
          - path: /url
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 8081
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 8081
